<resources>
    <string name="app_name">ForexBook</string>
    <string name="facebook_application_id">776315792727800</string>
    <string name="facebook_app_id">776315792727800</string>

    <string name="nav_title_exchange_rate">匯率表</string>
    <string name="nav_title_book">帳簿</string>
    <string name="nav_title_report">報表</string>

    <string name="default_bank">預設瀏覽銀行</string>
    <string name="book_name">帳簿名稱</string>
    <string name="foreign_balance">餘額</string>
    <string name="sell_value">賣出值</string>
    <string name="current_roi_value">當前損益</string>
    <string name="twd">TWD</string>
    <string name="credit">轉入</string>
    <string name="debit">轉出</string>
    <string name="fcy_credit">轉入外幣</string>
    <string name="fcy_debit">轉出外幣</string>
    <string name="interest_credit">利息收入</string>
    <string name="transactionDate">交易日期</string>
    <string name="fcy_amount">外幣金額</string>
    <string name="twd_amount">臺幣金額</string>

    <string name="ok">確定</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="mandatory_field">必填欄位</string>

    <string name="title_create_book">建立帳簿</string>
    <string name="title_edit_book">編輯帳簿</string>
    <string name="title_create_entry">建立新帳目</string>
    <string name="title_edit_entry">編輯帳目</string>

    <string name="desc_create_book">請輸入帳簿名稱，並選擇銀行及幣別。</string>

    <string name="message_create_successful">建立成功</string>
    <string name="message_update_successful">更新成功</string>
    <string name="message_delete_completed">刪除完成</string>
    <string name="message_delete_entry_confirm">確定要刪除這筆帳目嗎？此舉無法復原。</string>
    <string name="message_delete_book_confirm">確定要刪除這本帳簿及相關帳目嗎？此舉無法復原。</string>
    <string name="message_please_wait">請稍後…</string>
    <string name="message_no_entry_type">請選擇帳目種類</string>
    <string name="message_short_balance">餘額不足</string>

</resources>
